<resources>
    <string name="app_name">QshaRe</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="scanner">QshaRe Scanner</string>
    <string name="title_activity_settings">Settings</string>
    <string name="share_button_label">Share</string>


    <string name="delete_item_label">Delete File</string>
    <string name="confirm_delete">Delete File</string>
    <string name="confirm_delete_message">Are you sure you want to delete %1$s?</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="share">Share</string>

    <!-- Permissions -->
    <string name="camera_permission_rationale">Please allow use of your camera to use this feature</string>

    <!-- About Page -->
    <string name="about_header">About QshaRe</string>
    <string name="about_dev">Developed By: 4Dudes LLC (Caleb Dudley, Jay Harrison, Adam Kinard, Grant Marsh)</string>
    <string name="about_version">Version: 1.0</string>
    <string name="about_tag">QshaRe: An app that can do some things, but not all things. Use it wisely…</string>

    <!-- Help Page -->
    <string name="help_label">Help Me!</string>
    <string name="help_upload_label">Uploading a New File</string>
    <string name="help_upload_desc">To upload a new file, select the Floating Action Button at the
        bottom right-hand side of the screen. From the options that appear, tap the \"Upload\" button
        and the Android File Selector will appear to let you choose your file. For best results,
        try to upload smaller documents as Google Drive has a size limit that could cause errors.</string>
    <string name="help_qr_label">Scanning a QR Code</string>
    <string name="help_qr_desc">To scan a QR code, select the Floating Action Button at the
        bottom right-hand side of the screen. From the options that appear, tap the \"Scan Code\"
        button and the Scanning Page will appear. Simply point your camera at a valid QR code and
        QshaRe will automatically add the file to your list of available documents.</string>
    <string name="help_view_label">Accessing and Sharing Your Files</string>
    <string name="help_view_desc">To access a file and it\'s associated QR code, select any uploaded
        or previously scanned file from the Home Page. This will bring up the detail view of your
        file including a sharable QR code and link.\n\nTo share the Google Drive link with someone
        else, you can click \"Share\" to choose which app you would like to use. </string>
    <string name="help_delete_label">Deleting Files</string>
    <string name="help_delete_desc">To delete an individual file, swipe right on the file on the Home
        Page. To delete all of your files, go to the Settings Page and select the relevant setting.
        Beware, this will delete ALL of your files irreversibly from the app. They will
        NOT be deleted from Google Drive however, only from your app\'s memory.</string>
    <string name="help_account_label">Changing Your Google Account</string>
    <string name="help_account_desc">Visit the Settings Page to Sign In/Out of your Google Account.</string>
    <string name="help_glitch_label">Something Looks Really Weird!?</string>
    <string name="help_glitch_desc">Sorry about that! QshaRe is still in early development and you
        might see some weird visual glitches from time to time. No need to panic, just restart the
        app and those should go away. If you see something seriously wrong with our app, leave a
        comment on our Google Play Store page with a description of what went wrong and we\'ll
        get right on it. We appreciate any and all feedback!</string>
</resources>
